--- a/html/conclusion.html
+++ b/html/conclusion.html
@@ -14,7 +14,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Top container -->
 <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-  <span class="w3-bar-item w3-right"><img src="..\imagenes/aerogenerador.jpg" class="w3-circle w3-margin-right" style="width:40px"></span>
+   <span class="w3-bar-item w3-left"><img src="../imagenes/geoinnova.jpg" class="w3-margin-left" style="width:100px;height:50px"></span>
+  <span class="w3-bar-item w3-right"><img src="../imagenes/aerogenerador.jpg" class="w3-circle w3-margin-right" style="width:40px"></span>
    <span class="w3-bar-item w3-right"><h3>Actividad Final de Curso</h3></span>
 </div>
   
@@ -57,7 +58,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h3>575 ha</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4><strong>Extensión</strong></h4>
+        <h4>Extensión</h4>
       </div>
     </div>
     <div class="w3-quarter">
@@ -67,7 +68,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h3>76</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4><strong>Aerogeneradores</strong></h4>
+        <h4>Aerogeneradores</h4>
       </div>
     </div>
     <div class="w3-quarter">
@@ -77,7 +78,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h3>8,5 m/s</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4><strong>Velocidad viento</strong></h4>
+        <h4>Velocidad viento</h4>
       </div>
     </div>
     <div class="w3-quarter">
@@ -87,7 +88,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h3>100 Mwh</h3> 
         </div>
         <div class="w3-clear"></div>
-        <h4><strong>Capacidad instalada</strong></h4>
+        <h4>Capacidad instalada</h4>
       </div>
     </div>
   </div>
@@ -97,7 +98,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-third">
         <h5><strong>Localización</strong></h5>
 		  <!-- Mapa ArcGis On line incrustado -->
-
+		<div class="embed-container">
+		<iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Mapa Parque Eólico Paraguaná" src="//www.arcgis.com/apps/Embed/index.html?webmap=41223a7042714e50899c92858fe5f86a&extent=-70.2728,11.7805,-70.1648,11.836&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
+		</iframe>
+		</div>
       </div>
       <div class="w3-twothird">
         <h5><strong>Puntos de medición</strong></h5>
@@ -160,70 +164,21 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           </tr>
          </table>
       </div>
+	  <p>La propuesta de implantar paneles solares en el parque de generación eléctrica de Paraguaná es viable y permite complementar de manera significativa la producción de electricidad limpia para el estado Falcón.</p>
+      <p>Con una inversión adicional se podría aprovechar la infraestructura ya instalada, para implementar un parque mixto (eólico y solar) de mira de aumentar los aportes al SEN por encima de los 100 Mw que están previstos en el proyecto inicial.</p>
+	  <p>Existen las condiciones para complementar el proyecto de generación de energía alternativa del parque eólico Paraguaná. La instalación de paneles solares, que generen electricidad adicional y permita cubrir la falta de viento que puede afectar el rendimiento de los aerogeneradores instalados.</p>
     </div>
   </div>
-  <hr>
+ <hr>
   <div class="w3-container">
-    <h5><strong>Situación actual. Proyectos de energía alternativa</strong></h5>
-    <p>Generación</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-center w3-padding w3-green" style="width:33%">+33%</div>
-    </div>
-
-    <p>Aerogeneradores en funcionamiento</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-center w3-padding w3-orange" style="width:50%">50%</div>
-    </div>
-
-    <p>Infraestructura instalada</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-center w3-padding w3-red" style="width:25%">25%</div>
-    </div>
-
-    <p>Aporte al Sistema eléctrico nacional (SEN)</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-center w3-padding w3-blue" style="width:1%">1%</div>
-	</div>
-  <hr>
-
-  <div class="w3-container">
-    <h5><strong>Top 5. Capacidad instalada</strong></h5>
-    <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
-      <tr>
-        <td>China</td>
-		<td>188.392 Mwh</td>
-        <td>35%</td>
-      </tr>
-      <tr>
-        <td>Estados Unidos</td>
-		<td>89.077 Mwh</td>
-        <td>17%</td>
-      </tr>
-      <tr>
-        <td>Alemania</td>
-		<td>56.132 Mwh</td>
-        <td>10%</td>
-      </tr>
-      <tr>
-        <td>India</td>
-        <td>32.848</td>
-		<td>6%</td>
-      </tr>
-      <tr>
-        <td>España</td>
-        <td>23.170 Mwh</td>
-		<td>4%</td>
-      </tr>
-    </table><br>
-    <button class="w3-button w3-dark-grey"><a href="https://gwec.net/" target="_blank"><strong>Fuente</strong></a>  <i class="fa fa-arrow-right"></i></button>
-  </div>
-  <hr>
-  <div class="w3-container">
-    <h5><strong>Gráfica</strong></h5>
+    <h5><strong>Propuesta</strong></h5>
     <ul class="w3-ul w3-card-4 w3-white">
       <li class="w3-padding-16">
-        <img src="imagenes/capacidadmundial.png" class="w3-margin-center" style="width:630px;height:500px">
-		<span class="w3-medium"><p>Corresponde al potencial eólico instalado en el mundo hasta el 2017, según cifras publicadas por la Global Wind Energy Council (GWEC ).</p></span>
+		<span class="w3-medium">
+		<p>En base a los datos de potencial de radiación solar del área de estudio, obtenidos utilizando la aplicación Atlas Global Solar, podemos inferir que existen las condiciones ideales para aprovechar económicamente el potencial solar de la región.</p>
+        <p>Los datos analizados muestran un potencial fotovoltaico en promedio de unos 1750 Kvh, esto representa una excelente oportunidad de complementar la producción de electricidad limpia  y aprovechar al máximo el área ocupada por el parque eólico Paraguaná.</p>
+        <p>Las mediciones de los seis (6) puntos fueron contrastadas en la aplicación web SolarGIS dando como resultado valores muy cercanos a los obtenidos por otras aplicaciones de este tipo.</p>
+		</span>
       </li>
     </ul>
   </div>
@@ -233,34 +188,41 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h5><strong>Autor</strong></h5>
     <div class="w3-row">
       <div class="w3-col m2 text-center">
-        <img class="w3-circle" src="imagenes/carnet.jpg" style="width:96px;height:96px">
+        <img class="w3-circle" src="../imagenes/carnet.jpg" style="width:96px;height:96px">
       </div>
       <div class="w3-col m10 w3-container">
         <h4>Jorge Viloria <span class="w3-opacity w3-medium">Sep 29, 2014, 9:12 PM</span></h4>
-        <p>Especialista en SIG, Catastro y Cartografía, redactor del curso Geodatos en aplicaciones web para Geoinnova. El diseño esta basado en plantilla gratuita ofrecida por la W3C.</p><br>
+        <p>Especialista en SIG, Catastro, Cartografía y Tutor de cursos en línea.</p><br>
       </div>
+	  <div class="w3-col s8 w3-bar">
+      <span><strong>Mis contactos</strong></span><br>
+        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
+        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook"></i></a>
+        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
+	    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
+     </div>
     </div>
   <br>
-  <div class="w3-container w3-dark-grey w3-padding-32">
+  <div class="w3-container w3-dark-grey w3-padding-small">
     <div class="w3-row">
+	<h3>Curso: Geodatos en aplicaciones web</h3>
       <div class="w3-container w3-third">
-        <h5 class="w3-bottombar w3-border-green">Demographic</h5>
-        <p>Language</p>
-        <p>Country</p>
-        <p>City</p>
+        <h5 class="w3-bottombar w3-border-green">Colaboradores</h5>
+        <p>Geoinnova</p>
+        <p>International Renewable Energy Agency </p>
+		<p>SolarisGis</p>
       </div>
       <div class="w3-container w3-third">
-        <h5 class="w3-bottombar w3-border-red">System</h5>
-        <p>Browser</p>
-        <p>OS</p>
-        <p>More</p>
+        <h5 class="w3-bottombar w3-border-red">Sistemas y aplicaciones</h5>
+        <p>Navegador Mozilla Firefox</p>
+        <p>OpenStreeMap</p>
+        <p>GeoWE</p>
       </div>
       <div class="w3-container w3-third">
-        <h5 class="w3-bottombar w3-border-orange">Target</h5>
-        <p>Users</p>
-        <p>Active</p>
-        <p>Geo</p>
-        <p>Interests</p>
+        <h5 class="w3-bottombar w3-border-orange">Dirigido a</h5>
+        <p>Usuarios SIG</p>
+        <p>Profesionales</p>
+        <p>Publico interesado</p>
       </div>
     </div>
   </div>
